Fix schedule CSS alignment: time column and content column vertical alignment (#2578)
* Initial plan

* Fix CSS alignment of schedule: flex-shrink, flex, align-items


* Fix left-align of schedule titles and rebuild min.css from SCSS


---------

--- a/docs/_static/conf/scss/main-2026.scss
+++ b/docs/_static/conf/scss/main-2026.scss
@@ -258,11 +258,13 @@ body .page-content {
 
         &-item {
             display: flex;
+            align-items: flex-start;
             border-bottom: 1px solid #BEB2A0;
             padding-bottom: 10px;
             margin-bottom: 10px;
 
             .item-starting-time {
+                flex-shrink: 0;
                 width: 100px;
                 padding-right: 16px;
                 font-weight: $bold;
@@ -277,7 +279,8 @@ body .page-content {
             }
 
             .item-content {
-                max-width: 350px;
+                flex: 1;
+                text-align: left;
             }
         }
     }
